fixing so that clicking on navbar links now scroll down instead of jumping to it

--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ html, body {
   color: #ffffff;
 }
 
-#navbar{
+#myNavbar{
 	z-index: 100;
 }
 
